# kuboc-core

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: AUDITORIA_2026-05-05.md
kuboc_core/: __init__.py  auth.py  config.py  db.py  migrations.py  permisos.py  projects.py  templates.py
scripts/: seed_inicial.py
tests/: conftest.py  test_auth.py  test_permisos.py  test_smoke.py  test_templates.py
